<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="default_timer_value" translatable="false">0:00</string>

    <!-- Главный экран -->
    <string name="search_btn" translatable="false">Поиск</string>
    <string name="media_library_btn" translatable="false">Медиатека</string>
    <string name="settings_btn" translatable="false">Настройки</string>

    <!-- Настройки -->
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="contact_support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="search_hint" translatable="false">Поиск</string>

    <string name="share_title" translatable="false">Поделиться</string>
    <string name="share_url" translatable="false">"https://practicum.yandex.ru/profile/android-developer-plus/"</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email_name" translatable="false">kulkukumber@yandex.ru</string>
    <string name="email_title" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!-- Поиск -->
    <string name="search_clear_history" translatable="false">Очистить историю</string>
    <string name="search_history_title" translatable="false">Вы искали</string>
    <string name="search_internet_error" translatable="false">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_not_found" translatable="false">Ничего не нашлось</string>
    <string name="search_refresh" translatable="false">Обновить</string>

    <!-- Плеер -->
    <string name="player_duration" translatable="false">Длительность</string>
    <string name="player_collection" translatable="false">Альбом</string>
    <string name="player_year" translatable="false">Год</string>
    <string name="player_genre" translatable="false">Жанр</string>
    <string name="player_country" translatable="false">Страна</string>

    <string name="player_bottom_sheet_add_playlist" translatable="false">Добавить в плейлист</string>
    <string name="player_bottom_sheet_new_playlist_btn" translatable="false">Новый плейлист</string>

    <string name="player_added_to_playlist" translatable="false">Добавлено в плейлист %s</string>
    <string name="player_already_added_to_playlist" translatable="false">Трек уже добавлен в плейлист %s</string>

    <string name="player_dialog_notification_rationale_title" translatable="false">Разрешите присылать уведомления</string>
    <string name="player_dialog_notification_rationale_message" translatable="false">Без этого разрешения вы не сможете слушать музыку на фоне</string>
    <string name="player_dialog_notification_rationale_confirm_btn" translatable="false">разрешить</string>
    <string name="player_dialog_notification_rationale_decline_btn" translatable="false">отказать</string>

    <!-- Медиатека -->
    <string name="media_title" translatable="false">Медиатека</string>
    <string name="media_favorite_tracks" translatable="false">Избранные треки</string>
    <string name="media_playlists" translatable="false">Плейлисты</string>
    <string name="media_no_playlist_found" translatable="false">Вы не создали \n ни одного плейлиста</string>
    <string name="media_is_empty" translatable="false">Ваша медиатека пуста</string>
    <string name="media_new_playlist" translatable="false">Новый плейлист</string>

    <!-- Создание нового плейлиста -->
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="new_playlist_name" translatable="false">Название*</string>
    <string name="new_playlist_description" translatable="false">Описание</string>
    <string name="new_playlist_create" translatable="false">Создать</string>

    <string name="new_playlist_toast_text" translatable="false">Плейлист %s создан</string>

    <string name="new_playlist_dialog_title" translatable="false">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_message" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_dialog_cancel_btn" translatable="false">Отмена</string>
    <string name="new_playlist_dialog_confirm_exit_btn" translatable="false">Завершить</string>

    <!-- Экран плейлиста -->
    <string name="playlist_delete_track_dialog_title" translatable="false">Хотите удалить трек?</string>
    <string name="playlist_delete_dialog_confirm_btn" translatable="false">Да</string>
    <string name="playlist_delete_dialog_negative_btn" translatable="false">Нет</string>

    <string name="playlist_share_text" translatable="false">Поделиться</string>
    <string name="playlist_edit_text" translatable="false">Редактировать информацию</string>
    <string name="playlist_delete_text" translatable="false">Удалить плейлист</string>

    <string name="playlist_delete_dialog_title" translatable="false">Хотите удалить плейлист "%s"?</string>

    <string name="playlist_no_tracks_to_share" translatable="false">В плейлисте "%s" нет треков, которыми можно поделиться</string>

    <!-- Редактирование плейлиста -->
    <string name="edit_playlist_title" translatable="false">Редактировать</string>
    <string name="edit_playlist_save_btn_text" translatable="false">Сохранить</string>

    <!-- Прочее -->
    <string name="no_internet_connection" translatable="false">Отсутствует подключение к интернету</string>
</resources>