<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="@dimen/normal_padding"
    android:paddingBottom="@dimen/normal_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/normal_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        style="@style/Medium_text_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/normal_padding"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_search"
            style="@style/Main_button_style"
            android:text="@string/search_btn"
            app:icon="@drawable/baseline_search_24" />

        <Button
            android:id="@+id/btn_media_lib"
            style="@style/Main_button_style"
            app:icon="@drawable/media_21x20"
            android:text="@string/media_library_btn"/>

        <Button
            android:id="@+id/btn_settings"
            style="@style/Main_button_style"
            app:icon="@drawable/settings_20x20"
            android:text="@string/settings_btn"/>

    </LinearLayout>
</LinearLayout>

