<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ui.media.activity.MediaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.955" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <ImageView
        android:id="@+id/media_back_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingVertical="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"

        android:src="@drawable/arrow_back_24x24"
        app:layout_constraintStart_toEndOf="@id/left_border"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Medium_text_style"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"

        android:paddingHorizontal="@dimen/normal_padding"
        android:text="@string/media_title"

        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintStart_toEndOf="@id/media_back_button"

        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/media_tabLayout"
        style="@style/MediaTabLayoutStyle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/top_border"

        android:background="?attr/colorSecondary"
        app:tabIndicatorColor="?attr/colorOnSecondary"
        app:tabMode="fixed"
        app:tabTextColor="?attr/colorOnSecondary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/media_favorite_tracks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/media_playlists" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/media_viewPager"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/media_tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>