<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_padding"
                android:layout_marginVertical="@dimen/minor_padding"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_settings_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:paddingEnd="@dimen/minor_padding"
                    android:src="@drawable/arrow_back_24x24"
                    app:backgroundTint="?attr/colorSecondary" />

                <TextView
                    style="@style/Medium_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/normal_padding"
                    android:paddingEnd="@dimen/normal_padding"
                    android:text="@string/search_hint"
                    android:textColor="?attr/colorOnSecondary" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_padding"
                android:background="@drawable/search_edit_text_shape">

                <EditText
                    android:id="@+id/search_edit_text"
                    style="@style/Search_edit_text_style"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/normal_padding"
                    android:background="@null"

                    android:drawableStart="@drawable/search_icon_16x16"
                    android:drawablePadding="@dimen/minor_padding"
                    android:hint="@string/search_hint"

                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="15"
                    android:paddingVertical="@dimen/minor_padding"

                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor" />

                <ImageView
                    android:id="@+id/btn_clear_text_search"
                    style="Text_clear_search"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/normal_padding"
                    android:background="@drawable/close_button_search"
                    android:visibility="invisible" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/search_history_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingVertical="@dimen/normal_padding"

                    style="@style/Search_placeholder_text_style"
                    android:textColor="?attr/colorOnSecondary"
                    android:textFontWeight="500"
                    android:text="@string/search_history_title"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="gone"
                    android:id="@+id/search_recycle_view"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_padding"
                    android:orientation="vertical"

                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/track">

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:visibility="gone"
                    android:id="@+id/search_clear_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Search_functional_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/normal_padding"
                    android:text="@string/search_clear_history"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_placeholder_layout"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="210dp">

            <ImageView
                android:id="@+id/search_placeholder_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                tools:src="@drawable/no_tracks_found_placeholder"/>

            <TextView
                android:id="@+id/search_placeholder_text"
                style="@style/Search_placeholder_text_style"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_padding"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary"
                tools:text="@string/search_not_found"/>

            <Button
                android:id="@+id/search_refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_refresh"
                style="@style/Search_functional_button"/>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>